--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ PORT=3000
 MONGO_URI=mongodb://127.0.0.1:27017/recipesDB
 JWT_SECRET=super_secret_key_123
 JWT_EXPIRES_IN=7d
+
+ADMIN_EMAIL=admin@gmail.com
+ADMIN_PASSWORD=12345678
+ADMIN_USERNAME=Admin
